<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wwweather.app.wwweather.ShowForecast$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperatura"
        android:textSize="100sp"
        android:id="@+id/Temperatura"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" 
        android:visibility="gone"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/ciudad"
        android:id="@+id/Ciudad"
        android:gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="17dp"
 android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fecha"
        android:id="@+id/fecha"
        android:layout_below="@+id/Ciudad"
        android:layout_alignRight="@+id/Ciudad"
        android:layout_alignEnd="@+id/Ciudad"
        android:layout_marginRight="36dp" 
         android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tempmax"
        android:id="@+id/tempmax"
        android:layout_above="@+id/listViewWeather"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" 
         android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tempmin"
        android:id="@+id/tempmin"
        android:layout_alignBottom="@+id/Temperatura"
        android:layout_alignRight="@+id/Temperatura"
        android:layout_alignEnd="@+id/Temperatura"
         android:visibility="gone" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewWeatherForecast"
        android:layout_below="@+id/Temperatura" />

    <!-- el icono -->


</RelativeLayout>
